@@ -1,9 +1,10 @@
 package com.endpoint.rasp.engine;
 
+import com.endpoint.rasp.common.ArgsEnums;
+
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.HashMap;
-import java.util.Set;
 
 /**
  * @author: feiwoscun
@@ -13,41 +14,57 @@ import java.util.Set;
  */
 public class ArgsHashMap extends HashMap<String, String> {
 
-    public static final String AGENT = "-agent";
-    public static final String CORE = "-core";
+    public static final String PID = "-pid";
+    public static final String UTF_8 = "utf-8";
+    public static final String ACTION = "-action";
 
     public ArgsHashMap(int initialCapacity) {
         super(initialCapacity);
     }
 
-    public void setAgentPath() {
-        this.put(AGENT, encodeArg(this.get(AGENT)));
-    }
-
-    public void setCorePath() {
-        this.put(CORE, encodeArg(this.get(CORE)));
-    }
 
     private static String encodeArg(String arg) {
         try {
-            return URLEncoder.encode(arg, "utf-8");
+            return URLEncoder.encode(arg, UTF_8);
         } catch (UnsupportedEncodingException e) {
             return arg;
         }
     }
 
     public String getAgentPath() {
-        return this.get(AGENT);
+        return this.get("-home") + "/agent.jar";
     }
 
     public String getCorePath() {
-        return this.get(CORE);
+        return this.get("-home") + "/rasp-core-shade.jar";
     }
 
-    public  void printSelf(){
+/*    @Override
+    public String toString() {
         Set<Entry<String, String>> entries = this.entrySet();
-        for (Entry<String, String> entry : entries) {
-            System.out.println(entry.getKey() + ": " + entry.getValue());
+        return encodeArg(this.getCorePath() + ";" +
+                this.getAgentPath() + ";" +
+                this.getPid() + ";" +
+                this.getAction());
+    }*/
+
+    public String getPid() {
+        return this.get(PID);
+    }
+
+    public String getAction() {
+        return this.get(ACTION);
+    }
+
+    @Override
+    public String toString() {
+        StringBuilder builder = new StringBuilder();
+        for (String s : ArgsEnums.cache.keySet()) {
+            builder.append(s);
+            builder.append(";");
+            builder.append(this.get(s));
+            builder.append(";");
         }
+        return builder.substring(0, builder.length() - 1);
     }
 }
